    logic carefully
  * fix typoe in o/sfaslbfd.c
  * Add code to unwind redefinitions of the stack supremum in c2expr-top
    (used in c2multiple-value-prog1 and c2multiple-value-call in
    evaluating arguments) on non-local exit
  * Use new temporarry variables holding lisp stack  supremum for lint
  * Eliminate extraneous warning message when allocating fewer pages
    than already allocated

 -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 00:17:41 +0000

gcl (2.6.1-27) unstable; urgency=low

  * Modify default banner slightly
  * Homebrew plt-like mechanism for ensuring that valid internal
    addresses exist to which undefined symbols in compiled lisp objects
    referring to external shared libraries can be relocated
  * Make configure demand gettext when choosing --enable-locbfd
  * Make sure references to ldb1, a stub conventionally optimized away,
    can be resonled when optimization is turned off
  * completion_matches ->  rl_completion_matches in gcl_readline.d,
    which is what is exported in the headers

 -- Camm Maguire <camm@enhanced.com>  Fri, 27 Feb 2004 23:50:49 +0000

gcl (2.6.1-26) unstable; urgency=low

  * Rework compiler::*ld-libs*, compiler::link, and unixport/makefile to
    accomodate mingw need for firstfile.o and lastfile.o
  * Remove incompatible -fomit-frame-pointer when compiling with -pg
    profiling
  * Load sys-proclaim.lisp files forimproved linking and smaller object
    size across the board, install same for use with compiler::link
  * Use pathnames instead of strings in compiler::link, also in image
    init files, for Windows
  * small mod to unixport/makefile re filtering of firstfile and
    lastfile
  * Backport zero divisor error cnditions from HEAD for
    floor,ceiling,truncate
  * Default to debug mode on hppa to work around gcc compiler
    optimization bugs
  * Add missing m4 and automake files in binutils directory to enable
    automake and autoconf here