@@ -13,8 +13,9 @@ gcl (2.6.1-28) unstable; urgency=low
   * Use new temporarry variables holding lisp stack  supremum for lint
   * Eliminate extraneous warning message when allocating fewer pages
     than already allocated
+  * Rework internal plt symbol address capture
 
- -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 00:17:41 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 00:24:14 +0000
 
 gcl (2.6.1-27) unstable; urgency=low
 
